testing markdown links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 </head>
 
 <body>
-
+   
+   <a href="./markdown.html">click to a markdown.html</a>
+      <a href="./markdown.html">click to a markdown.mdl</a>
+   
    <h1>My CodeWar solutions:</h1>
 
    <table>
