--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
    
    <a href="./markdown.html">click to a markdown.html</a>
-      <a href="./markdown.html">click to a markdown.mdl</a>
+      <a href="./markdown.md">click to a markdown.mdl</a>
    
    <h1>My CodeWar solutions:</h1>
 
